mule-user-guide/v/3.7/salesforce-connector.adoc
=  Salesforce连接器
:keywords: salesforce connector, inbound, outbound, streaming, poll, dataweave, datasense
：imagesdir：_images
：图标：字体

https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[_Select_]

*Release Notes:* link:/release-notes/salesforce-connector-release-notes[Salesforce连接器发行说明] +
*Technical Reference:* http://mulesoft.github.io/mule-salesforce-connector/[Salesforce连接器技术参考] +
*Anypoint Exchange:* https://www.anypoint.mulesoft.com/exchange/?search=salesforce[Salesforce搜索]

用于Salesforce的Anypoint连接器可让您连接到Salesforce平台。该连接器提供了方便的方法来利用Salesforce的功能，包括使用Apex类。

连接器根据您配置的操作执行针对Salesforce的SOAP API，REST API，Bulk API或Streaming API的API调用。 API调用通过HTTPS连接使用XML请求/响应。所有必需的请求标头，错误处理和HTTPS连接配置都从用户中抽象出来并构建到连接器中。

== 先决条件

本文档假设您熟悉Salesforce，批处理，Mule，Anypoint连接器和Anypoint Studio基本要素。此外，本页假定您对骡流中的元素和全局元素有基本的了解。

=== 要求

要使用Salesforce连接器，您需要：

*  *Studio*  -  link:https://www.mulesoft.com/lp/dl/mule-esb-enterprise[Anypoint工作室]的一个实例。如果您不使用Anypoint Studio进行开发，请按照<<Configuring Maven Dependencies,Configuring Maven Dependencies>>中的说明执行您的项目。
*  *Salesforce developer account*  - 在 link:https://developer.salesforce.com[销售队伍]注册一个。
*  *Security token*  - 登录 link:https://developer.salesforce.com[销售队伍]，在右上角点击您的姓名，然后点击*Setup*> *My Personal Information*> *Reset Security Token*。然后，单击*Reset My Security Token*。 Salesforce通过电子邮件将您的安全令牌发送到您注册的电子邮件地址
*  *Consumer key and Secret*  - 如果您使用Salesforce连接器访问*OAuth API*，则还需要消费者密钥和密钥。请参阅有关如何 link:/mule-user-guide/v/3.7/using-a-connector-to-access-an-oauth-api[使用Salesforce连接器访问OAuth API]的详细文档。

要在Mule应用程序中使用Salesforce连接器，如果要手动创建XML，请确保包含正确的名称空间和模式位置。
当使用Anypoint Studio时，当您将连接器拖放到项目中时，它应该为您执行此操作。

=== 命名空间

[source, xml]
----
xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc"
----

=== 架构位置

[source, code, linenums]
----
xsi:schemaLocation="
...
http://www.mulesoft.org/schema/mule/sfdc
http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd"
----

*For example:*

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/sfdc
               http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd">
  
      <!-- Insert your configuration elements and your flow here -->
</mule>
----

== 兼容性

[%header,cols="2*a"]
|===
|应用/服务|版本
| Mule Runtime | Mule企业版3.5.2及更新版本
| Anypoint Studio |仅适用于Studio 5.4.0及更新版本
| Salesforce | v32.0至v36.0
|===

[IMPORTANT]
从v.7.0.0开始，Salesforce连接器与其他 link:/mule-user-guide/v/3.7/anypoint-connectors#connector-categories[_选择_]连接器一样，已通过Anypoint Platform进行商业授权许可。以前的版本将继续免费提供给社区。

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 配置Maven依赖关系

下载并安装连接器后，请使用以下步骤使Salesforce连接器可用于Mule应用程序内部以供使用，并使用连接器打包应用程序。
如果您使用Anypoint Studio，它会自动为您执行此操作。

. 将存储库信息添加到项目的pom.xml文件中：
+
[source, xml, linenums]
----
<repositories>
   <repository>
        <id>mule-ee-releases</id>
        <name>MuleEE Releases Repository</name>
        <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
    <repository>
        <id>mule-ee-snapshots</id>
        <name>MuleEE Snapshots Repository</name>
        <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
    </repository>
</repositories>
----

. 将该模块作为依赖项添加到您的项目以获取特定发行版本：

+
[source, xml, linenums]
----
<dependency>
    <groupId>org.mule.modules</groupId>
    <artifactId>mule-module-sfdc</artifactId>
    <version>RELEASE</version>
</dependency>
----
+
或者为最新版本：
+
[source, xml, linenums]
----
<dependency>
    <groupId>org.mule.modules</groupId>
    <artifactId>mule-module-sfdc</artifactId>
    <version>LATEST</version>
</dependency>
----
+
. 如果您打算在Mule应用程序中使用此模块，则需要将其包含在打包过程中。这样，包含流和Java代码的最终zip文件也包含此模块及其依赖项。为该模块的Mule Maven插件的配置添加一个特殊的"inclusion"，如下所示：
+
[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>maven-mule-plugin</artifactId>
    <extensions>true</extensions>
    <configuration>
        <excludeMuleDependencies>false</excludeMuleDependencies>
        <inclusions>
            <inclusion>
                <groupId>org.mule.modules</groupId>
                <artifactId>mule-module-sfdc</artifactId>
            </inclusion>
        </inclusions>
    </configuration>
</plugin>
----

== 创建一个新项目

在Mule应用程序项目中使用Salesforce连接器：

. 在Anypoint Studio中，单击文件>新建> Mule项目。
. 为您的新项目输入一个名称，并将其余选项保留为默认值。
+
image:new-proj.png[创建新的项目对话框]

. 如果您打算使用Git，请针对Studio Projects的默认忽略项目选择*Create a default .gitignore file*，然后单击*Next*。
. 点击*Finish*创建项目。


=== 配置Salesforce全局元素

要在您的Mule应用程序中使用Salesforce连接器，您必须配置一个全局Salesforce连接器元素，供应用程序中的所有Salesforce连接器使用（请阅读有关 link:/mule-user-guide/v/3.7/global-elements[全球元素]的更多信息）。

以下是为此产品创建全局元素时可供选择的选项：

image:sfdc-choose-global-type.png[SFDC-选择全局型]

如果您有多个版本的连接器，Studio会提示您输入版本。确保你选择了6.2.0或更新的版本。

[TIP]
====
从此连接器的6.2.0版开始，您可以：

* 从Apex REST类中调用方法。
* 使用*OAuth 2.0 JWT Bearer*和*OAuth 2.0 SAML Bearer*流进行Salesforce身份验证。 SalesForce提供几种类型的SAML认证。有关更多信息，请参阅 http://help.salesforce.com/apex/HTViewHelpDoc?id=remoteaccess_oauth_SAML_bearer_flow.htm[OAuth 2.0 SAML承载声明流程]。

有关更多信息，请参阅 link:https://developer.salesforce.com/docs[Salesforce文档]。
====

===  Salesforce连接器身份验证

要访问Salesforce实例中的数据，您在身份验证方面有以下可能性：

*  link:https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_calls_login.htm[基本认证]

[NOTE]
*Basic authentication*是最容易实现的。您只需在全局配置中提供凭据（请参阅 link:/mule-user-guide/v/3.7/configuring-properties#global-properties[全局属性]），然后在应用程序中的任何Salesforce连接器中引用全局配置文件。基本认证通常建议用于内部应用程序。

*  link:https://help.salesforce.com/apex/HTViewHelpDoc?id=remoteaccess_oauth_web_server_flow.htm&language=en_US[OAuth 2.0]
*  link:https://help.salesforce.com/HTViewHelpDoc?id=remoteaccess_oauth_jwt_flow.htm[OAuth 2.0 JWT持票人]
*  link:https://help.salesforce.com/apex/HTViewHelpDoc?id=remoteaccess_oauth_SAML_bearer_flow.htm&language=en_US[OAuth 2.0 SAML承载]

[NOTE]
实施基于*OAuth 2.0*的身份验证机制需要执行一些额外的步骤，但如果您的服务暴露给外部用户，则可能会首选它，因为它可确保更好的安全性。

基本身份验证的==== 必需参数

.  *Username*：输入Salesforce用户名。
.  *Password*：输入相应的密码。

====  OAuth 2.0配置所需的参数

*  *Consumer Key*  -  Salesforce连接应用程序的使用者密钥。请参阅<<Creating a Consumer Key>>。
*  *Consumer Secret*  - 连接器访问Salesforce的消费者秘密。

====  OAuth 2.0 JWT承载配置所需的参数

.  *Consumer Key*  -  Salesforce连接应用程序的使用者密钥。请参阅<<Creating a Consumer Key>>。
.  *Keystore File*  - 请参阅<<Generating a Keystore File>>。
.  *Store Password*  - 密钥库的密码。
.  *Principal*  - 您要使用的Salesforce用户名。

==== 创建一个使用者密钥

创建消费者密钥：

. 登录到Salesforce，然后转到*Setup*> *Build*> *Create*> *Apps.*
. 在*Connected App*部分下，点击*New*。
. 请按照以下步骤创建新的关联应用：
.. 在相应的字段中输入以下信息：
... 连接的应用的名称。
...  API名称。
... 联系电子邮件。
.. 在*API (Enable OAuth Settings)*下选择*Enable OAuth Settings*。
.. 输入*Callback URL*。
.. 选择*Use digital signatures*复选框。
.. 点击*Browse*并导航到包含您的Mule应用程序的Studio工作区。
.. 选择**salesforce-cert.crt**，然后单击*Open*。
.. 将*Full access (full)*和*Perform requests on your behalf at any time (refresh_token, offline_access)* OAuth范围添加到*Selected OAuth Scopes*。
.. 点击*Save*，然后点击*Continue*。
. 配置应用程序的授权设置：+
..  点击*Manage*，然后点击*Edit*。
.. 在*OAuth Policies*部分下，展开*Permitted Users*下拉菜单，然后选择*Admin approved users are pre-authorized*。
.. 点击*Save*。
. 在*Profiles*部分下，点击*Manage Profiles*。
. 选择您的用户个人资料，然后点击*Save*。
. 返回连接的应用程序列表：*Build>Create>Apps*。
. 在*Connected Apps*部分下，选择您创建的已连接应用。

您可以看到您需要在连接器配置中提供的使用者密钥。

==== 生成密钥库文件

*Keystore*是在验证期间用于签署数据的密钥库的路径。只允许使用Java密钥库格式。

要生成密钥库文件：

. 转到您的Mule工作区，并打开命令提示符（对于Windows）或终端（对于Mac）。
. 输入`keytool -genkeypair -alias salesforce-cert -keyalg RSA -keystore salesforce-cert.jks`，然后按Enter键。
. 输入以下详细信息：
密钥库的.. 密码。
.. 您的名字和姓氏。
您的组织单位.. 。
.. 您所在城市的名称，州和您县的两个字母代码。
+
系统会在工作区中生成一个包含私钥/公钥对的Java密钥库文件。
. 为连接器配置中的*Keystore*提供文件路径。
+
输入`keytool -exportcert -alias salesforce-cert -file salesforce-cert.crt -keystore salesforce-cert.jks`，然后按Enter键。
+

系统现在将密钥库中的公钥导出到工作区中。这是您需要在Salesforce实例中输入的公钥。
. 确保您的工作区中同时拥有密钥库（salesforce-cert.jks）和公钥（salesforce-cert.crt）文件。

====  OAuth 2.0 SAML载体配置所需的参数

*  *Consumer Key*  -  Salesforce连接应用程序的使用者密钥。请参阅<<Creating a Consumer Key>>。
*  *Keystore File*  - 用于在验证期间签署数据的密钥存储区的路径。只有Java密钥存储格式是允许的。
*  *Store Password*  - 密码商店密码
*  *Principal*  - 所需Salesforce用户的用户名

==== 配置会话无效

Salesforce Connector版本7.0.0中的新增功能适用于所有配置*except OAuth v2.0*
通过检查*Disable session invalidation*来使会话保持活动状态的选项
复选框。

如果取消选中该复选框，连接器会在不再需要时自动销毁该会话。

一般来说，在处理线程或并发时，应该保持会话活动。 Salesforce使用
针对所有线程的相同会话（例如，如果您有活动会话并且再次登录，Salesforce将使用现有会话，而不是
创建一个新的），所以为了确保连接在线程完成时不会关闭，您应该检查连接器全局元素属性的"Connection"部分中的*Disable session invalidation*复选框。

image:disable-session.png[禁用会话复选框]

==== 配置Apex和代理设置

所有Salesforce连接器配置均支持Apex和代理设置。如下配置它们：

.  *Apex Settings*值：
..  *Fetch All Apex Soap Metadata*  - 获取所有Apex Soap类的元数据
..  *Fetch All Apex Rest Metadata*  - 获取所有Apex Rest类的元数据
..  *Apex Class Name:*
...  *None*  - 没有提到Datasense获取的Apex类名称。
...  *From Message*  - 允许您从MEL表达式中指定类名称。
...  *Create Object manually*  - 用户创建列表并将类名添加到列表中 - 只有这些类及其方法由DataSense获取。
+
[NOTE]
*Fetch All Apex Soap Metadata*和*Fetch All Rest Metadata*复选框优先于Apex类名称设置。如果选中这些框，则无论您在“Apex类名称”部分中进行选择，它们都将获取所有Apex SOAP元数据或APEX REST元数据。

.  *Proxy Settings*值：
..  *Host*  - 代理服务器的主机名。
..  *Port*  - 代理服务器运行的端口号。
..  *Username*  - 登录到服务器的用户名。
..  *Password*  - 相应的密码。
. 点击*OK*。
. 在Salesforce主连接器屏幕中，从下拉菜单中选择一项操作。
+
image:SalesForceMain1.png[SalesForceMain]
+
.  *Invoke apex REST method*操作在Salesforce连接器的6.2.0版本中是新增功能，并与Apex类名称设置配合使用。 DataSense获取可以使用REST调用的Apex类及其方法的名称，这些名称可以在*Apex Class Method Name*参数的下拉列表中找到。选择一种方法和DataSense来获取该方法的输入和输出。
.  *Invoke apex SOAP method*操作在Salesforce连接器的6.1.0版本中是新增功能，并与Apex类名称设置配合使用。 DataSense获取Apex类及其方法的名称，这些名称可以在*Apex Class Method Name*参数的下拉列表中找到。选择一种方法和DataSense来获取该方法的输入和输出。
*Input Reference*是一个XMLStreamReader  - 从XML创建，代表所选方法的输入（类似于SOAP操作的输入）：
+
[source, xml, linenums]
----
<soap:testSOAPMethod>
    <soap:name>John</soap:name>
    <soap:someNumber>54</soap:someNumber>
</soap:testSOAPMethod>
----
+
默认情况下*Input Reference*被设置为`#[payload]`，并表示之前选择的方法的输入，如您所期望的那样。如果使用Datasense，那么可以使用转换消息组件来创建来自任何其他格式（JSON，POJO等）的输入。
invokeApexSoapMethod操作的输出与输入引用类似。

=== 从较旧版本更新

如果您当前使用的是旧版本的连接器，则在Anypoint Studio的右下角会出现一个小弹出窗口，并带有"Updates Available"消息：

. 点击弹出框并查看可用更新。
. 选中您需要的*Salesforce connector*版本的复选框，然后点击*Next*并按照用户界面提供的说明进行操作。
. 提示时重新启动Studio。
. 重新启动后，创建流程并使用Salesforce连接器时，如果您安装了多个版本的连接器，则可能会询问您要使用哪个版本。选择你想使用的版本。

我们建议您使Studio保持最新版本。


== 了解Salesforce连接器

Mule应用程序中的*Salesforce connector*函数作为安全入口，您可以通过它访问Salesforce中的组织信息并采取行动。

使用连接器，您的应用程序可以执行Salesforce.com（SFDC）通过其四个API公开的多个操作。在构建与Salesforce连接的应用程序时（例如将新联系人上传到帐户的应用程序），您不必经过自定义编码（并保护！）连接的工作。相反，您可以将连接器放入流中，配置一些连接细节，然后开始传输数据。

Salesforce连接器的实际价值与您在设计时将其与Mule中提供的其他功能特性结合使用。

*  *DataSense*：启用后， link:/anypoint-studio/v/5/datasense[DataSense]为Salesforce标准对象（sObjects）提取元数据，以自动确定应用程序必须传递给Salesforce或可期望的数据类型和格式。通过启用此功能（在Global Salesforce Connector元素中），Mule会发现您必须发送的数据类型，或准备从Salesforce接收数据。
*  *Transform Message Component*：当与支持DataSense的Salesforce连接器配合使用时，该组件的集成脚本语言 link:/mule-user-guide/v/3.7/dataweave[DataWeave]可以自动提取sObject元数据，您可以使用该元数据进行可视化映射和/或转换以不同的数据格式或结构。从本质上讲，DataWeave让你控制数据类型之间的映射。例如，如果您在应用程序中配置了Salesforce连接器，然后在连接器之后放置一个Transform Message组件，该组件使用DataWeave收集DataSense提取的信息以预填充映射的输入值。换句话说，DataSense确保DataWeave知道它必须使用的数据格式和结构，因此您不必手动找出它。
*  *Poll scope and Watermark*：要定期从Salesforce中将数据提取到您的应用程序中，请使用封装在 link:/mule-user-guide/v/3.7/poll-reference[投票范围]中的Salesforce连接器代替流程中的入站端点。使用投票范围的 link:/mule-user-guide/v/3.7/poll-reference[水印]功能来确保您只需提取，然后处理来自Salesforce的新信息。
*   *Batch Processing*： link:/mule-user-guide/v/3.7/batch-processing[批量作业]是一段代码，它将消息拆分为单独的记录，对每条记录执行操作，然后报告结果并可能将处理后的输出推送到其他系统或队列。此功能在处理流式输入或与SaaS提供商（如Salesforce）设计"near real-time"数据集成时特别有用。

===  Salesforce连接器功能

Salesforce可识别五种集成模式以与其他系统连接。 Salesforce连接器是"window"，您可以通过它从您的Mule应用程序访问Salesforce中的数据或对其执行操作，从而解决这些模式，如下表所示。

[%header,cols="2*,^"]
|===
|集成模式 |描述 |由Salesforce Connector支持
| *Remote Process Invocation: Request-Reply*  | Salesforce在远程系统中启动进程，等待远程系统完成处理，然后从远程系统再次接受控制。 |✔
| *Remote Process Invocation: Fire and Forget*  | Salesforce在第三方系统中启动进程并收到进程已启动的确认。第三方系统继续独立于Salesforce进行处理。 |✔
| *Batch Data Synchronization*  |外部系统在Salesforce _in batchches_中访问，更改，删除或添加数据，反之亦然（Salesforce与外部系统）。 |✔
| *Remote Call-In*  |外部系统在Salesforce中访问，更改，删除或添加数据，反之亦然（Salesforce与外部系统）。 |✔
| *User Interface Update Based on Data Changes*  | Salesforce UI会根据第三方系统中的更改进行更新。  |✔
|===

Salesforce通过几个API公开了解决这些集成模式的操作。请注意，Salesforce连接器不公开这些Salesforce API的可能操作。尽管在应用程序中如何使用连接器没有多大区别，但了解Mule的Salesforce连接器执行Salesforce通过以下六种API公开的许多操作是非常有用的：

*  link:http://www.salesforce.com/us/developer/docs/api/index.htm[SOAP API]  - 此API可让您通过SOAP调用安全地访问贵组织的Salesforce信息。 Salesforce连接器执行的大多数操作都映射到此API公开的操作。
** 通过SOAP API执行的所有Salesforce操作都具有一个可选参数
"Headers"可以采用以下任何一种 link:https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/soap_headers.htm[Salesforce SOAP标题]：
***  AllOrNoneHeader
***  AllowFieldTruncationHeader
***  AssignmentRuleHeader
***  CallOptions
***  EmailHeader
***  LocaleOptions
***  MruHeader
***  OwnerChangeOptions
***  QueryOptions
***  UserTerritoryDe​​leteHeader

*  link:https://www.salesforce.com/us/developer/docs/api_asynch/[批量API]  - 可以快速安全地将批量的组织数据加载到Salesforce中。
*  link:http://www.salesforce.com/us/developer/docs/api_streaming/[流媒体API]  - 安全地接收有关Salesforce中组织信息更改的通知。
*  link:http://www.salesforce.com/us/developer/docs/api_meta/[元数据API]  - 管理自定义并构建可以管理元数据模型的工具，而不是数据本身。
*  link:https://www.salesforce.com/us/developer/docs/apexcode/[Apex SOAP API]  - 将Apex类方法公开为自定义SOAP Web服务调用。这允许外部应用程序调用Apex Web服务以在Salesforce中执行操作。
*  link:https://developer.salesforce.com/page/Creating_REST_APIs_using_Apex_REST[Apex REST API]  - 使用Apex创建您自己的基于REST的Web服务。它具有REST体系结构的所有优点，并提供了定义自定义逻辑的功能，并包含自动参数/对象映射。

请注意，Salesforce连接器不会执行由以下Salesforce API公开的操作：*NOT*：

*  Chatter REST API
* 工具API

[NOTE]
====
详细了解Salesforce的API以及它们各自的适当用例。

*  link:http://blogs.developerforce.com/tech-pubs/2011/10/salesforce-apis-what-they-are-when-to-use-them.html[Salesforce API：他们是什么以及何时使用它们]
*  link:https://help.salesforce.com/HTViewHelpDoc?id=integrate_what_is_api.htm&language=en_US[我应该使用哪种API？]
====

以下各节提供了有关如何在应用程序中使用Salesforce连接器的信息。除了这些基础知识之外，您还可以访问描述如何 link:/mule-user-guide/v/3.7/salesforce-connector-authentication[保护您与Salesforce的连接]（通过基本身份验证或OAuth身份验证）或访问连接器的 link:http://mulesoft.github.io/mule-salesforce-connector[完整的参考文档]的文档。

== 使用Salesforce连接器

要查看连接器的所有可能操作，预期属性和返回数据，请参阅 link:http://mulesoft.github.io/mule-salesforce-connector/[技术参考APIdocs]的列表。

一般来说，在您的应用程序中有*three*种方式来使用Salesforce连接器：作为*outbound connector*，*inbound connector*或*streaming inbound connector*。以下是对这三种情况的描述。

[NOTE]
当然，您可以使用XML在您的应用程序中配置连接器，但Studio的可视化编辑器提供了几种设计时可用性优势（<<Best Practices for Using a Salesforce connector in Studio,Best Practices for Using a Salesforce connector in Studio>>）。以下步骤和信息主要与Studio的可视化编辑器中使用Salesforce连接器有关。

=== 出站场景

用作流程中的出站连接器将数据推送到Salesforce中。要以此容量使用连接器，只需将连接器置于流入端点后的任意点（请参见下面的图片顶部）。

基本示例==== 

image:sfdc-connector-outbound.png[sfdc_outbound]

.  *File connector*  - 将文件（如CSV）中的数据接收到流中。
.  *Transform Message*  - 转换数据结构和格式以生成Salesforce连接器所期望的输出。
.  *Salesforce connector*（_outbound_） - 与Salesforce连接，并执行将数据推送到Salesforce的操作。

[NOTE]
====
您还可以在 link:/mule-user-guide/v/3.7/batch-processing[批处理]中使用Salesforce连接器批量推送数据到Salesforce（请参阅下图中的底部）。
====

==== 出站批示例

image:example_batch.png[example_batch]

.  *Salesforce connector*（标记为"Find Lead"） - 与Salesforce连接以执行查找数据的操作。
.  *Salesforce connector*（标记为"Insert Lead"）执行操作以将数据推送到批量提交的Salesforce中。

=== 入站方案

将流连接器与流中的 link:/mule-user-guide/v/3.7/poll-reference[投票范围]结合使用，可将Salesforce中的数据拖入应用程序中。要以此能力使用连接器，您必须首先在您的流程开始处放置一个*Poll scope*元素，然后将Salesforce连接器放置在投影范围内（请参阅下面的图片）。

==== 基本入站示例

image:poll_inbound.png[poll_inbound]

.  *Poll scope*  - 定期轮询提取数据。
.  *Salesforce connector*  - 与Salesforce连接，并执行操作以提取数据。
.  *Transform Message*  - 转换数据结构和格式以生成File端点期望的输出。
.  *File connector*  - 将数据记录在文件中，例如CSV，并将其保存到用户定义的目录或位置。
+
[NOTE]
您还可以在 link:/mule-user-guide/v/3.7/batch-processing[批处理]开头使用轮询包装的Salesforce连接器从Salesforce提取数据，然后批量处理Mule中的内容。

==== 入站批处理示例

image:sfdc-inbound-batch.png[example_batch_input1]

.  *Poll scope*  - 定期轮询提取数据。
.  *Salesforce connector*  - 与Salesforce连接，并执行操作以提取数据。

==== 流式入站场景

用作入站连接器，不包含在投票范围中，可将数据从Salesforce传输到您的应用程序中。要以此容量使用连接器，请在流程开始时放置Salesforce连接器。

[NOTE]
Studio会自动将连接器转换为*Salesforce (Streaming)*模式。从技术上讲，这仍然是相同的连接器，但它访问*Salesforce's Streaming API*，这意味着已转换的连接器可以执行的_only_操作是*Subscribe to topic*（即订阅PushTopic）。

image:sfdc-streaming-inbound.png[SFDC-流，入站]

.  *Poll scope*  - 定期轮询提取数据。
.  *Salesforce connector*  - 与Salesforce连接，并执行操作以提取数据。

=== 用例

安装并配置Salesforce连接器后，您可以使用以下内容。

==== 日期格式

要存储日期字段只需使用日期Java对象，而日期时间使用日历Java对象。您可以使用DataWeave实现此目的。它会在幕后为你创建对象。

==== 流

使用Streaming API，您可以以安全且可扩展的方式接收事件，以更改与您定义的Salesforce对象查询语言（SOQL）查询相匹配的Salesforce数据。

事件转换为骡子事件并派发到您的流量。

==== 发布主题

在开始接收Salesforce中更改的事件之前，您必须先创建一个PushTopic。 link:https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/pushtopic.htm[PushTopic]是Salesforce中的一个特殊对象，它将名称（主题的名称）和SOQL绑定在一起。一旦创建了PushTopic，您就可以通过仅使用其名称来订阅它。

有几种方法可以创建PushTopic;我们将介绍使用Salesforce本身并使用此连接器。您也可以使用 link:https://workbench.developerforce.com/about.php[工作台]。

==== 推送一个主题

推动一个话题：

. 点击_您的姓名_> *System Log*。
. 在*Logs*标签上，点击*Execute*。
. 在*Enter Apex Code*窗口中，粘贴以下Apex代码，然后点击*Execute*。
+
[source, code, linenums]
----
PushTopic pushTopic = new PushTopic();
pushTopic.ApiVersion = 23.0;
pushTopic.Name = 'AllAccounts';
pushTopic.Description = 'All records for the Account object';
pushtopic.Query = 'SELECT Id, Name FROM Account';
insert pushTopic;
System.debug('Created new PushTopic: '+ pushTopic.Id);
----

您可以使用*create*操作或独占*publish-topic*操作，如下所示：

[source, xml, linenums]
----
<sfdc:publish-topic name="AccountUpdates" query="SELECT Id, Name FROM Account"/>
----

==== 订阅主题

创建主题后，您可以通过订阅主题开始接收活动。 `subscribe-topic`就像一个入站端点，它可以这样使用：

[source, xml, linenums]
----
<flow name="accountUpdatesSubscription">
    <!-- INBOUND ENDPOINT -->
    <sfdc:subscribe-topic topic="AccountUpdates"/>
    <!-- REST OF YOUR FLOW -->
    <logger level="INFO" message="Received an event for Salesforce Object ID #[map-payload:Id]"/>
</flow>
----

骡子流被分成两部分。它的第一部分通常是入站端点（或HTTP连接器）和消息源。 Mule流是一个接收和生成事件的实体，稍后由其余流处理。另一部分是消息处理器的集合，用于处理由入站端点接收和生成的消息（也称为事件）。

每当我们对`AccountUpdates`的订阅收到一个事件时，它都会执行其余的流程。在这个例子的情况下，它在INFO级别向日志打印一条消息。

==== 检查事件

通过流推送的事件包含有关已更改的Salesforce数据的信息，它如何更改以及何时更改。通常订阅收到的原始JSON看起来像这样：

[source, json, linenums]
----
"channel": "/topic/AccountUpdates",
  "data": {
    "event": {
      "type": "created",
      "createdDate": "2011-11-35T19:14:31.000+0000"
    },
    "sobject": {
      "Id": "a05D0000002jKF1IAM"
    }
  }
}
----

连接器解析这些信息，并向您发送一个流程实际上可以使用的信息。

入站属性。==== 

作为入站属性传递的信息：

[%header,cols="3*",width=90%]
|===
|属性名称 |范围 |映射到
|频道 | INBOUND  |频道JSON属性
|类型 | INBOUND  |在数据中键入JSON属性
| createdDate  | INBOUND  |在数据中创建了日期JSON属性
|===

除"channel"外，_event_中的每个属性均可用作INBOUND属性。

==== 有效载荷

事件的负载实际上是一个映射，它包含接收到的JSON数据中的`SObject`对象内的所有内容。这是为了便于能够使用映射 - 有效载荷表达式评估器来提取SObject的信息而使用的映射。

查看我们使用`#[map-payload:Id]`打印SObject ID的<<Subscribing to a Topic>>示例。

==== 批量

Salesforce批量API针对加载或删除大量数据进行了优化。它允许您通过提交由Salesforce在后台处理的多个批次来异步查询，插入，更新，插入或删除大量记录。

我们的连接器极大地简化了模型，使操作变得透明和简单。虽然连接器与作业和批次这样的概念一起工作，但除了在可能的响应中，您很少会看到它们。

===== 批量创建/更新/插入对象

批量创建对象与使用简单（非批量）"create"操作创建对象一样简单。让我们快速回顾一下正常的"create"操作是如何工作的：

[source, xml, linenums]
----
<sfdc:create type="Account">
    <sfdc:objects>
        <sfdc:object>
            <Name>MuleSoft</Name>
            <BillingStreet>30 Maiden Lane</BillingStreet>
            <BillingCity>San Francisco</BillingCity>
            <BillingState>CA</BillingState>
            <BillingPostalCode>94108</BillingPostalCode>
            <BillingCountry>US</BillingCountry>
        </sfdc:object>
    </sfdc:objects>
</sfdc:create>
----

这个Mule配置片段创建了一个带有这些属性的"Account"类型的SObject。
您可以在`objects`集合中拥有任意数量的对象。该消息处理器的输出是`SaveResult`的列表。 `SaveResult`是状态和ID之间的复合对象。 `SaveResult`指示对象何时成功创建对象的ID值。

批量版本的创建操作名为_create-bulk_并共享完全相同的签名。

[source, xml, linenums]
----
<sfdc:create-bulk type="Account">
    <sfdc:objects>
        <sfdc:object>
            <Name>MuleSoft</Name>
            <BillingStreet>30 Maiden Lane</BillingStreet>
            <BillingCity>San Francisco</BillingCity>
            <BillingState>CA</BillingState>
            <BillingPostalCode>94108</BillingPostalCode>
            <BillingCountry>US</BillingCountry>
        </sfdc:object>
    </sfdc:objects>
</sfdc:create-bulk>
----

`create`和`create-bulk`之间几乎没有实际区别。当然，处理批量操作意味着实际的创建过程将在后台由Salesforce处理，因此连接器不回复SaveResults集合，因为它还没有。相反，连接器会回复一个BatchInfo对象，该对象包含批处理的ID以及它刚刚创建的用于上传这些对象的作业的ID。

对于支持"bulk"的所有操作，这种行为更改仍然正确。

===== 监控批次

您可以在Salesforce中监视Bulk API批处理。

要跟踪批量数据加载作业及其相关批次的状态，请单击__您的名称_> *Setup*> *Monitoring*> *Bulk Data Load Jobs*。单击作业ID查看作业详情页面。

作业详情页面包含作业所有批次的相关列表。相关列表提供了每个批次的*View Request*和*View Response*链接。如果该批次是CSV文件，则链接将以CSV格式返回请求或响应。如果批处理是XML文件，则链接将以XML格式返回请求或响应。这些链接可用于在Salesforce API版本19.0及更高版本中创建的批次。


在=== 中使用Salesforce连接器的最佳实践

要充分利用DataSense和Salesforce连接器必须提供的功能，设计时最佳实践要求您应按特定顺序构建应用程序：

.  *CONFIGURE the connector*
.  *TEST the connection*
.  *INITIATE DataSense metadata extraction*
.  *BUILD the rest of your flow*
.  *ADD and configure DataWeave*

这种设计时策略的目标是设置集成难题的各个部分，然后使用DataWeave "glue them together"。从入站端点开始，这种类型的"align, then glue together"策略不是依次设计流，而是确保您在任何可能的情况下利用DataSense预先填充关于输入或输出数据的结构和格式的信息转换消息组件。下面部分的图表规定了在使用Salesforce连接器的流程的上下文中遵循此最佳实践的流程。有关更多信息，请阅读 link:/anypoint-studio/v/5/datasense[DataSense最佳实践]。

*Note*：订阅之前未在Salesforce中发布的主题时，订阅成功。当主题后来发布时，已经订阅它的用户不会收到有关该主题的通知。用户必须在创建主题后重新订阅。

=== 提示

*  *Upsert*：除非您为要尝试插入的 link:http://www.salesforce.com/us/developer/docs/officetoolkit/Content/sforce_api_objects_list.htm[的sObject]配置*{{0}}*，否则每次使用upsert都会失败。
+
image:salesforce-upsert.png[UPSERT]

*  *Upsert*：upsert操作不适用于sObject `priceBookentry2`。
*  *Query*：即使您可以通过DataSense查看SObject的字段及其相应类型，*Query*操作也会返回_all_字段作为`String`。
如果您想使用字段的实际类型，则必须使用*Transform Message*组件将该字段转换为所需的类型。
+
image:query.png[查询日期时间]
在本例中，尽管*CreatedDate*字段显示为dateTime，但查询实际上会返回表示日期的String。
为了实际使用该字段作为dateTime，可以使用Transform Message对其进行配置，如示例中所示。
*  *Inserting into Dropdown*：请注意，将相关值插入到Salesforce中的现有下拉列表字段中并不总是有效。测试以确认功能。
*  *Evaluating Values in Dropdown*：如果您要对Salesforce中现有下拉列表字段中的值进行评估，请确保在下拉列表中使用_exact value_。例如，如果您使用值"US"针对包含值"USA"的下拉列表的内容进行评估，则评估将有效，但最终会在下拉列表中显示两个值：一个用于美国，一个用于美国。
*  *Currency*：货币值的长度不能超过18个字符。
*  *Currency*：使用多种货币时，请注意您的sObject使用哪种货币，以避免不准确的条目。默认货币与组织级别的位置匹配。
*  *Limits on API Calls*：查看您有权获得的 link:http://help.salesforce.com/apex/HTViewHelpDoc?id=integrate_api_rate_limiting.htm[限制API调用的数量]。确保您的应用程序不会超过每天分配的电话数量。
*  *Opportunity sObject*：从商机提取数据时，请注意"quarter"与日历年不相关;在这种情况下，"quarter"与组织的财政年度有关。


=== 将Salesforce连接器添加到流程中

您在应用程序中使用Salesforce连接器的方式取决于您对需要执行的功能所作的两至三个关键选择：

. 您是将数据推入Salesforce还是将数据从Salesforce中提取出来？
. 如果从Salesforce提取数据，您是仅仅订阅Salesforce中的主题，还是定期轮询Salesforce以获取信息？
. 您是否会使用基本身份验证或OAuth保护您与Salesforce的连接？

下面的工作流程图概述了将Salesforce连接器添加到应用程序所需的步骤和决定。

image:sfdc_workflow.png[sfdc_workflow]

.. 尽管您可以在流程中的任意位置放置连接器，但请注意，您可能需要转换数据结构和格式以平滑地将日期传输到或接受来自其他资源的数据。
..  Salesforce（Streaming）连接器只能对Salesforce中的组织数据执行一项操作：`Subscribe to topic`。
.. 详细了解如何使用 link:/mule-user-guide/v/3.7/poll-reference[投票范围]定期轮询Salesforce以获取应用程序要处理的新数据。

根据您在应用程序中的功能（流式数据，轮询数据，推送数据等），您选择的操作以及您所采用的sObject，Studio使不同的Salesforce连接器字段可用于配置。本文档的目标不包括对应用程序中操作和对象的所有组合的详尽探索。但是，您可以访问 link:http://mulesoft.github.io/mule-salesforce-connector[完整的参考文档]以了解如何为所有操作配置连接器。


== 示例用例

以下示例调用Apex方法。在Salesforce中，我们制作了一个名为**CustomOrder_c**的自定义对象，其中有两个自定义字段*ProductName_c*和**ProductValue_c**。 Apex Rest类使用*Deploy metadata*操作部署在Salesforce中。

[source, java, linenums]
----
@RestResource(urlMapping='/customOrder')
global with sharing class ApexRestCustomOrderUtils {


    @HttpGet
    global static List<CustomOrder__c> listAllCustomOrders() {
    List<CustomOrder__c> allCustomOrders = [SELECT ProductName__c , ProductValue__c FROM CustomOrder__c];
      return allCustomOrders;
    }

  @HttpPost
    global static void createOrder(String productOrdered, String orderValue) {
      CustomOrder__c order = new CustomOrder__c();
      order.ProductName__c = productOrdered;
      order.ProductValue__c = orderValue;
      insert order;
    }
  }
----

配置：

. 在Anypoint Studio中，点击*File*> *New*> *Mule Project*，为项目命名，然后点击*OK*。
. 在搜索字段中，键入"http"并将*HTTP*连接器拖到画布上。
. 点击HTTP连接器，点击*Connector Configuration*右侧的绿色加号，然后在下一个屏幕中点击*OK*接受默认设置。
. 在搜索栏中输入"sales"并将*Salesforce*连接器拖动到画布上。像以前一样配置。
. 点击*Invoke apex REST method*操作。
Datasense带来了所有可用的Apex方法（对于在连接器配置中的Apex类名称下设置的类，或者如果选中*Fetch All Apex REST Metadata*，则为所有Apex REST类）。
. 从*Apex Class*中选择一个班级。在*Method Name*中，您将看到来自该Apex类的所有可用方法。假设我们为Apex类选择*ApexRestCustomOrderUtils*，并为该方法选择*createOrder*。选择一种方法后，DataSense会映射该特定方法的输入和输出格式。
. 添加*Transform Message*组件，一个位于连接器之前或之后。
+
[NOTE]
如果在DataWeave中显示"Payload - Unknown"，那么该方法要么没有输入，要么不返回任何内容。如果DataWeave检测到该方法的任何输入，则显示为："Payload - Unknown"。
+
. 将此JSON代码作为输入样本添加到Transform Message组件的Dataweave编辑器中：
+
[source, json, linenums]
----
{
    "orderValue" : "50000",
    "productOrdered" : "car"
}
----
+
映射如下所示：
+
image:useCase2Weave.png[SFDCMap]
// todo：给一个新的img
+
流量显示为：
+
image:salesforce_usecase_flow.png[SFDCflows]
+
. 创建流程后，右键单击 image:package-explorer.png[包资源管理器]中的项目名称，然后单击*Run As*> *Mule Application*。
. 将用作Transform Message组件的示例的JSON发布到HTTP连接器的URL。应在Salesforce中创建自定义订单的新实例。

=== 示例使用案例代码

将此XML代码粘贴到Anypoint Studio中，以试验前一节中描述的两个流程。

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc" xmlns:test-data-sense="http://www.mulesoft.org/schema/mule/test-data-sense" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/test-data-sense http://www.mulesoft.org/schema/mule/test-data-sense/current/mule-test-data-sense.xsd
http://www.mulesoft.org/schema/mule/sfdc http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
    <test-data-sense:config name="TestDataSense__Configuration" doc:name="TestDataSense: Configuration">
        <test-data-sense:apex-class-names>
            <test-data-sense:apex-class-name>D:/work/mule/workSpace/5.3.0/test-data-sense-connector/src/main/resources/SOAPTest2.wsdl</test-data-sense:apex-class-name>
        </test-data-sense:apex-class-names>
    </test-data-sense:config>
    <sfdc:config name="Salesforce__Basic_Authentication" username="${salesforce.username}" password="${salesforce.password}" securityToken="${salesforce.securityToken}" doc:name="Salesforce: Basic Authentication">
        <sfdc:apex-class-names>
            <sfdc:apex-class-name>ApexRestCustomOrderUtils</sfdc:apex-class-name>
        </sfdc:apex-class-names>
    </sfdc:config>
    <flow name="testFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/createOrder" doc:name="HTTP"/>
        <dw:transform-message metadata:id="5cba1daa-4a0f-4db3-9349-0ff44c8c1e23" doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
	productOrdered: payload.orderValue,
	orderValue: payload.productOrdered
}]]></dw:set-payload>
        </dw:transform-message>
        <sfdc:invoke-apex-rest-method config-ref="Salesforce__Basic_Authentication" restMethodName="ApexRestCustomOrderUtils||createOrder^/customOrder^HttpPost^void^productOrdered=String, orderValue=String" doc:name="Salesforce"/>
        <set-payload value="'Successfully created Order!'" doc:name="Set Payload"/>
    </flow>
    <flow name="testFlow1">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/listOrder" doc:name="HTTP"/>
        <sfdc:invoke-apex-rest-method config-ref="Salesforce__Basic_Authentication" restMethodName="ApexRestCustomOrderUtils||listAllCustomOrders^/customOrder^HttpGet^List&amp;lt;CustomOrder__c&amp;gt;^" doc:name="Salesforce"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/json
---
payload]]></dw:set-payload>
        </dw:transform-message>
    </flow>
</mule>

----

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]。
* 详细了解Mule中的 link:/mule-user-guide/v/3.7/batch-processing[批量处理]。
* 详细了解 link:/mule-user-guide/v/3.7/poll-reference[投票范围]。
* 访问 link:https://developer.salesforce.com/docs[Salesforce开发人员文档]以获取有关Salesforce对象和查询的详细文档。
